--- a/Juego/src/juego/Jugar.form
+++ b/Juego/src/juego/Jugar.form
@@ -52,9 +52,6 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Gloucester MT Extra Condensed" size="72" style="0"/>
             </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="0" type="rgb"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="Jugar"/>
           </Properties>
           <Constraints>
@@ -103,11 +100,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="b9" green="b9" red="b9" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Seleccione el arma 2"/>
+            <Property name="text" type="java.lang.String" value="Seleccione el arma/hechizo 2 "/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="400" y="170" width="180" height="40"/>
+              <AbsoluteConstraints x="380" y="170" width="200" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -133,7 +130,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="570" y="110" width="150" height="40"/>
+              <AbsoluteConstraints x="590" y="110" width="150" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -175,7 +172,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="570" y="170" width="150" height="40"/>
+              <AbsoluteConstraints x="590" y="170" width="150" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -293,11 +290,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="b9" green="b9" red="b9" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Seleccione el arma 1"/>
+            <Property name="text" type="java.lang.String" value="Seleccione el arma/hechizo 1"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="400" y="110" width="180" height="40"/>
+              <AbsoluteConstraints x="380" y="110" width="200" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -319,7 +316,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="fotoarma1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Foto arma"/>
+            <Property name="text" type="java.lang.String" value="Foto arma/hechizo"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -349,7 +346,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="fotoarma2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Foto arma"/>
+            <Property name="text" type="java.lang.String" value="Foto arma/hechizo"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -357,7 +354,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JButton" name="btnAgregarImagen1">
+        <Component class="javax.swing.JButton" name="btnSeleccionarPersonaje1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="6" green="80" red="cc" type="rgb"/>
@@ -371,7 +368,7 @@
             <Property name="text" type="java.lang.String" value="Seleccionar Personajes"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAgregarImagen1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSeleccionarPersonaje1ActionPerformed"/>
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
